--- a/src/app/employees/employee/employee.component.html
+++ b/src/app/employees/employee/employee.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="employeeService.form"] class="normal-form">
+<form [formGroup]="employeeService.form" class="normal-form">
   <mat-grid-list cols="2" rowHeight="300px">
     <mat-grid-tile>
       <div class="controles-container">
@@ -27,14 +27,14 @@
           <mat-radio-group>
             <mat-radio-button value="1">Male</mat-radio-button>
             <mat-radio-button value="2">Female</mat-radio-button>
-            <mat-radio-button value="3">Other<mat-radio-button>
+            <mat-radio-button value="3">Other</mat-radio-button>
           </mat-radio-group>
         </div>
 
         <mat-form-field>
           <mat-select placeholder="Department" formControlName="department">
             <mat-option>None</mat-option>
-            <ng-container **ngFor="let department of departments">
+            <ng-container *ngFor="let department of departments">
               <mat-option value="{{ department.id }}">{{ department.value }}</mat-option>
             </ng-container>
           </mat-select>
